c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/extra_credit/string_literal_label.c
// You can't use a string literal as a label
int main(void) {
    "foo": return 0;
}